--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,6 +103,15 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+     // 配置签名
+                            signingConfigs {
+                                    release {
+                                        storeFile file(MYAPP_RELEASE_STORE_FILE)
+                                        storePassword MYAPP_RELEASE_STORE_PASSWORD
+                                        keyAlias MYAPP_RELEASE_KEY_ALIAS
+                                        keyPassword MYAPP_RELEASE_KEY_PASSWORD
+                                    }
+                                }
     splits {
         abi {
             reset()
@@ -115,6 +124,8 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+         // 引用签名
+               signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
